--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,12 @@
     <h1>
       User Registry
     </h1>
+    {{#unless logged_in}}
+    <nav>
+      <button class="btn" id="homelogin" onclick="location.href='">log in</button>
+    </nav>
+    {{/unless}}
+
     {{#if logged_in}}
     <nav>
       <button class="btn" id="logout">logout</button>
