Added assets & tailwind css

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <title>The Gamelist</title>
   <link rel="stylesheet" href="/css/jass.css">
 </head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      User Registry
+      The Gamelist
     </h1>
     {{#unless logged_in}}
     <nav>
-      <button class="btn" id="homelogin" onclick="location.href='">log in</button>
+      <button class="btn" id="homelogin">log in</button>
     </nav>
     {{/unless}}
 
@@ -31,7 +31,9 @@
   <footer>
 
   </footer>
-
+  {{#unless logged_in}}
+  <script src="js/script.js"></script>
+  {{/unless}}
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
