--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -234,7 +234,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
-            <img src="https://images.unsplash.com/photo-1552374196-1ab2a1c593e8?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by Austin Wade" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+            <img src="/assets/img/TombRaider_SC.jpg" loading="lazy" alt="Tomb Raider Graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
             <div class="w-full flex flex-col bg-white text-center rounded-lg relative p-4">
               <span class="text-gray-500">What are other users playing?</span>
@@ -247,7 +247,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
-            <img src="https://images.unsplash.com/photo-1603344797033-f0f4f587ab60?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by engin akyurt" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+            <img src="/assets/img/GodofWar_SC.jpg" loading="lazy" alt="Kratos graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
             <div class="w-full flex flex-col bg-white text-center rounded-lg relative p-4">
               <span class="text-gray-500">Don't miss out!</span>
@@ -260,7 +260,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
-            <img src="https://images.unsplash.com/photo-1552668693-d0738e00eca8?auto=format&q=75&fit=crop&crop=top&w=600&h=700" loading="lazy" alt="Photo by Austin Wade" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+            <img src="/assets/img/Halo_SC.jpg" loading="lazy" alt="Halo graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
             <div class="w-full flex flex-col bg-white text-center rounded-lg relative p-4">
               <span class="text-gray-500">Looking for something specific?</span>
@@ -273,7 +273,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
-            <img src="https://images.unsplash.com/photo-1560269999-cef6ebd23ad3?auto=format&q=75&fit=crop&w=600&h=700" loading="lazy" alt="Photo by Austin Wade" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+            <img src="/assets/img/Witcher3_SC.jpg" loading="lazy" alt="Witcher 3 graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
             <div class="w-full flex flex-col bg-white text-center rounded-lg relative p-4">
               <span class="text-gray-500">Open to anything?</span>
