--- a/views/layouts/main2.handlebars
+++ b/views/layouts/main2.handlebars
@@ -1,47 +1,3 @@
-{{!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Gamelist</title>
-  <link rel="stylesheet" href="/css/output.css">
-</head>
-
-<body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      The Gamelist
-    </h1>
-    {{#unless logged_in}}
-    <nav>
-      <button class="btn" id="homelogin">log in</button>
-    </nav>
-    {{/unless}}
-
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{/if}}
-  </header>
-  <main class="container container-fluid mt-5">
-    {{{ body }}}
-  </main>
-  <footer>
-
-  </footer>
-  {{#unless logged_in}}
-  <script src="js/script.js"></script>
-  {{/unless}}
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
-
-</html> --}}
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,70 +12,9 @@
 </head>
 <body>
 
-    <!-- hero - start -->
-<div class="bg-white pb-6 sm:pb-8 lg:pb-12">
-    <header class="border-b mb-8">
-        <div class="max-w-screen-2xl flex justify-between items-center px-4 md:px-8 mx-auto">
-        <!-- logo - start -->
-        <a class="inline-flex items-center text-black-800 text-2xl md:text-3xl font-bold gap-2.5" aria-label="logo">
-            <svg width="95" height="94" viewBox="0 0 95 94" class="w-6 h-auto text-indigo-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path d="M96 0V47L48 94H0V47L48 0H96Z" />
-            </svg>
-            The Gamelist
-            <i data-fa-symbol="gamepad" class="fa-solid fa-gamepad"></i>
-        </a>
-        <!-- logo - end -->
-
-        <!-- nav - start -->
-        <nav class="hidden lg:flex gap-12 2xl:ml-16">
-            <a href="#" class="text-indigo-500 text-lg font-semibold">Home</a>
-            <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Top Games</a>
-            <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Recommended</a>
-            <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">About</a>
-        </nav>
-        <!-- nav - end -->
-
-        <!-- buttons - start -->
-        <div class="flex sm:border-l border-r divide-x">
-            <a href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 hidden sm:flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-            </svg>
-
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Wishlist</span>
-            </a>
-  
-          <a href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-            </svg>
-
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Account</span>
-            </a>
-
-            <a href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-            </svg>
-
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Cart</span>
-            </a>
-
-            <button type="button" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex lg:hidden flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
-            </svg>
-
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Menu</span>
-            </button>
-        </div>
-        <!-- buttons - end -->
-    </div>
-</header>
-  
 {{{ body }}}
 
-  <!-- footer - start -->
+ <!-- footer - start -->
   <div class="bg-white pt-4 sm:pt-10 lg:pt-12">
     <footer class="max-w-screen-2xl px-4 md:px-8 mx-auto">
       <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 border-t gap-12 lg:gap-8 pt-10 lg:pt-12 mb-16">
@@ -131,7 +26,7 @@
                 <path d="M96 0V47L48 94H0V47L48 0H96Z" />
               </svg>
   
-              The Gamelist
+              The Gamelist <i data-fa-symbol="gamepad" class="fa-solid fa-gamepad fa-lg"></i>
             </a>
           </div>
           <!-- logo - end -->
@@ -262,7 +157,6 @@
     </footer>
   </div>
   <!-- footer - end -->
-
 
 </body>
 </html>
