--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,47 +1,3 @@
-{{!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Gamelist</title>
-  <link rel="stylesheet" href="/css/output.css">
-</head>
-
-<body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      The Gamelist
-    </h1>
-    {{#unless logged_in}}
-    <nav>
-      <button class="btn" id="homelogin">log in</button>
-    </nav>
-    {{/unless}}
-
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{/if}}
-  </header>
-  <main class="container container-fluid mt-5">
-    {{{ body }}}
-  </main>
-  <footer>
-
-  </footer>
-  {{#unless logged_in}}
-  <script src="js/script.js"></script>
-  {{/unless}}
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
-
-</html> --}}
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -72,7 +28,7 @@
 
         <!-- nav - start -->
         <nav class="hidden lg:flex gap-12 2xl:ml-16">
-            <a href="#" class="text-indigo-500 text-lg font-semibold">Home</a>
+            <a href="http://localhost:3001/" class="text-indigo-500 text-lg font-semibold">Home</a>
             <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Top Games</a>
             <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Recommended</a>
             <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">About</a>
@@ -81,29 +37,62 @@
 
         <!-- buttons - start -->
         <div class="flex sm:border-l border-r divide-x">
+          
+{{!-- PROFILE BUTTON START --}}
+
+          {{#if logged_in}}
             <a href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 hidden sm:flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
             </svg>
 
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Wishlist</span>
+            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Profile</span>
             </a>
-  
-          <a href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
+          {{/if}}
+
+{{!-- PROFILE BUTTON END --}}
+
+{{!-- LOG IN BUTTON START --}}
+
+          {{#unless logged_in}}
+          <a href="http://localhost:3001/login" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
             </svg>
 
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Account</span>
+            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Log In</span>
             </a>
+          {{/unless}}
+
+{{!-- LOG IN BUTTON END --}}
+
+{{!-- LOG OUT BUTTON START --}}
+
+          {{#if logged_in}}
+            <a id="logout" href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+            </svg>
+
+            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Log Out</span>
+            </a>
+          {{/if}}
+
+{{!-- LOG OUT BUTTON END --}}
+
+
+{{!-- MEMBERS BUTTON START--}}
 
             <a href="#" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 18.72a9.094 9.094 0 003.741-.479 3 3 0 00-4.682-2.72m.94 3.198l.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0112 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 016 18.719m12 0a5.971 5.971 0 00-.941-3.197m0 0A5.995 5.995 0 0012 12.75a5.995 5.995 0 00-5.058 2.772m0 0a3 3 0 00-4.681 2.72 8.986 8.986 0 003.74.477m.94-3.197a5.971 5.971 0 00-.94 3.197M15 6.75a3 3 0 11-6 0 3 3 0 016 0zm6 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0zm-13.5 0a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z" />
             </svg>
 
-            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Cart</span>
+            <span class="hidden sm:block text-gray-500 text-xs font-semibold">Members</span>
             </a>
+
+{{!-- MEMBERS BUTTON END --}}
+
 
             <button type="button" class="w-12 sm:w-20 md:w-24 h-12 sm:h-20 md:h-24 flex lg:hidden flex-col justify-center items-center hover:bg-gray-100 active:bg-gray-200 transition duration-100 gap-1.5">
             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-800" viewBox="0 0 20 20" fill="currentColor">
@@ -116,8 +105,13 @@
         <!-- buttons - end -->
     </div>
 </header>
-  
+
+
+
+
 {{{ body }}}
+
+
 
   <!-- footer - start -->
   <div class="bg-white pt-4 sm:pt-10 lg:pt-12">
@@ -263,6 +257,9 @@
   </div>
   <!-- footer - end -->
 
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
 
 </body>
 </html>
