Created file paths for about & top games

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -20,7 +20,7 @@
                         <div class="p-4 pb-6 flex justify-center flex-col items-center">
                             <img class="md:block hidden" src="https://i.ibb.co/FYTKDG6/Rectangle-118-2.png" alt="Alexa featured Image" />
                             <img class="md:hidden block" src="https://i.ibb.co/zHjXqg4/Rectangle-118.png" alt="Alexa featured Image" />
-                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Sebastian Barrera/p>
+                            <p class="font-medium text-xl leading-5 text-gray-800 dark:text-black mt-4">Sebastian Barrera</p>
                         </div>
                         <div class="p-4 pb-6 flex justify-center flex-col items-center">
                             <img class="md:block hidden" src="https://i.ibb.co/fGmxhVy/Rectangle-119.png" alt="Olivia featured Image" />
