--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -207,7 +207,7 @@
         <div class="w-full sm:w-1/2 lg:w-2/5 flex flex-col p-4 sm:p-8">
           <h2 class="text-white text-xl md:text-2xl lg:text-4xl font-bold mb-4">A collection full of this year's bestselling titles.</h2>
   
-          <p class="max-w-md text-gray-400 mb-8">This is a section of some simple filler text, also known as placeholder text. It shares some characteristics of a real written text.</p>
+          <p class="max-w-md text-gray-400 mb-8"></p>
   
           <div class="mt-auto">
             <a href="#" class="inline-block bg-white hover:bg-gray-100 active:bg-gray-200 focus-visible:ring ring-indigo-300 text-gray-800 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3">Dive in!</a>
@@ -217,7 +217,7 @@
   
         <!-- image - start -->
         <div class="w-full sm:w-1/2 lg:w-3/5 h-48 sm:h-auto order-first sm:order-none bg-gray-700">
-          <img src="https://images.unsplash.com/photo-1505846951821-e25bacf2eccd?auto=format&q=75&fit=crop&crop=top&w=1000&h=500" loading="lazy" alt="Photo by Dom Hill" class="w-full h-full object-cover object-center" />
+          <img src="/assets/img/zelda.jpg" loading="lazy" alt="Zelda_BOTW" class="w-full h-full object-cover object-center" />
         </div>
         <!-- image - end -->
       </div>
@@ -233,7 +233,7 @@
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6">
         <!-- product - start -->
         <div>
-          <a href="#" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
+          <a href="http://localhost:3001/api/games/top20" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
             <img src="/assets/img/TombRaider_SC.jpg" loading="lazy" alt="Tomb Raider Graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
             <div class="w-full flex flex-col bg-white text-center rounded-lg relative p-4">
