--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,9 +29,9 @@
         <!-- nav - start -->
         <nav class="hidden lg:flex gap-12 2xl:ml-16">
             <a href="http://localhost:3001/" class="text-indigo-500 text-lg font-semibold">Home</a>
-            <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Top Games</a>
-            <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Recommended</a>
-            <a href="#" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">About</a>
+            <a href="http://localhost:3001/api/games/top20" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">Top Games</a>
+            <a href="http://localhost:3001/api/news" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">News</a>
+            <a href="http://localhost:3001/about" class="text-gray-600 hover:text-indigo-500 active:text-indigo-700 text-lg font-semibold transition duration-100">About</a>
         </nav>
         <!-- nav - end -->
 
