--- a/views/topgames.handlebars
+++ b/views/topgames.handlebars
@@ -1,4 +1,4 @@
-<div class="grid lg:grid-cols-1 gap-8 xl:gap-x-12 justify-center">
+<div class="grid lg:grid-cols-3 p-10 gap-6 xl:gap-x-12 justify-center">
 
 {{#each games as |game|}}
 <div class="max-w-md rounded overflow-hidden shadow-lg">
