Fixed localhost hrefs

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -102,7 +102,7 @@
         <!-- product - start -->
         <div>
 
-          <a href="http://localhost:3001/api/games/eldenring" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
+          <a href="/api/games/eldenring" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
 
             <img src="../assets/img/EldenRing.jpeg" loading="lazy" alt="Elden Ring cover art" class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
   
@@ -129,7 +129,7 @@
         <!-- product - start -->
         <div>
 
-          <a href="http://localhost:3001/api/games/hogwarts" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
+          <a href="/api/games/hogwarts" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
 
             <img src="../assets/img/HL.jpg" loading="lazy" alt="Hogwarts Legacy cover art" class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
 
@@ -236,7 +236,7 @@
         <!-- product - start -->
         <div>
 
-          <a href="http://localhost:3001/api/games/top20" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
+          <a href="/api/games/top20" class="group h-96 flex items-end bg-gray-100 rounded-lg overflow-hidden shadow-lg relative p-4">
 
             <img src="/assets/img/TombRaider_SC.jpg" loading="lazy" alt="Tomb Raider Graphic" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
   
